Dodanie nagłówka h1 do indeks.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Test git</title>
 </head>
 <body>
+    <h1>Projekt asynchronicznych zapytań</h1>
+    
     <ul>
         <li>opis 1</li>
         <li>opis 2</li>
